@@ -22,6 +22,7 @@
 .Sh SYNOPSIS
 .Nm
 .Op Fl d
+.Op Fl a
 .Op Fl L Ar location
 .Op Fl P Ar policy
 .Op Fl O Ar poe
@@ -44,6 +45,8 @@ The options are as follows:
 .Bl -tag -width Ds
 .It Fl d
 Enable more debugging information.
+.It Fl a
+Display all remote ports, including those hidden by the smart filter.
 .It Fl f Ar format
 Choose the output format. Currently
 .Em plain ,
